# gdal-svn

./: CMakeLists.txt
alg/: CMakeLists.txt
cmake/: FindGEOS.cmake  cpl_config.h.cmake
frmts/: CMakeLists.txt
frmts/grib/degrib18/degrib/: fileendian.h  memendian.h
frmts/gtiff/libtiff/: tif_open.c  tif_predict.c
frmts/usgsdem/: CMakeLists.txt
gcore/: CMakeLists.txt
ogr/ogrsf_frmts/dgn/: dgnread.cpp  dgnwrite.cpp
port/: CMakeLists.txt  cpl_port.h
